# clipboard

./: .gitignore  APPSTORE_CONFIG.md  AUTOSTART_FIX.md  BUILD.md  CLEAR_CACHE_BUTTON_FIX.md  CLEAR_CONFIRM_FEATURE.md  EXCEPTIONAL_FIXES.md  IMAGE_FIX_SUMMARY.md  IMAGE_STORAGE_REDESIGN.md  IMAGE_TEST_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PRIVACY_POLICY_FIX.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICKSTART_NEW.md  README.md  RELEASE_CHECKLIST.md  RESYNC_GUIDE.md  SAVE_IMAGE_FEATURE.md  TASK_PROGRESS.md  TESTING.md  TEST_GUIDE.md  USAGE.md  clipboard.db  dev.sh  diagnose.sh  fix-status-issue.md  icon.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  show-window.sh  start-app.sh  test-app.sh  test-clear-cache.sh  test-exceptional.sh  test-functional.sh  test-guide.md  test-image-storage.sh  (+7 more)
.github/workflows/: build.yml
instance1/: package-lock.json  package.json  tauri.conf.json  tsconfig.json  tsconfig.node.json
instance2/: index.html  public  src  tauri.conf.json  vite.config.ts
scripts/: build-appstore.sh  fix-macos-name.sh  generate-icons.sh  release.sh  update-version.sh
src/: App.vue
src-tauri/: Cargo.toml  entitlements.mas.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/client/: mod.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/device/: mod.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/pairing/: mod.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/trusted/: mod.rs
src/components/: DevicePanel.vue  FileTransfer.vue  PairRequestDialog.vue  PrivacyPolicy.vue  (+3 more)
